# hft-matching-engine

./: .gitignore  CMakeLists.txt  README.md
bots/: base_bot.py  market_maker.py  noise_bot.py
include/: EngineServer.hpp  MarketPublisher.hpp  Order.hpp  OrderBook.hpp  Session.hpp  Trade.hpp
src/: EngineServer.cpp  MarketPublisher.cpp  Order.cpp  OrderBook.cpp  Session.cpp  Trade.cpp  engine_server_main.cpp  main.cpp
tests/: order_book_tests.cpp
